# FastAPI_test_task

./: .env  .env-docker  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  settings.py
app/: api.py  dals.py  models.py  schemas.py  session.py  workers.py
app/auth/: auth.py
docker/: app.sh
migrations/: env.py
migrations/versions/: 5edf5d3d897b_rename_id.py
poetry-demo/: pyproject.toml  requirements.txt
