[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["ThrallBata <vicortobdel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
psycopg2-binary = "^2.9.6"
python-jose = "^3.3.0"
alembic = "^1.11.1"
envparse = "^0.2.0"
passlib = "^1.7.4"
asyncpg = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
